[package]
name = "ninja-adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_ecs_ldtk = "0.5.0"
iyes_loopless = "0.9.1"
bevy_rapier2d = { version = "0.19.0", features = ["simd-stable"]}
bevy-inspector-egui = "0.15.0"
leafwing-input-manager = "0.7.1"
bevy_pixel_camera = "0.3.0"